--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
         <li class="navigation-item"><a class="navigation-link" href="#">Сертификаты</a></li>
       </ul>
       <div class="nav-right">
-        <a class="navigation-link phone">+7 555 555-55-55</a>
+        <a class="navigation-link phone" href="tel:+75555555555">+7 555 555-55-55</a>
         <ul class="social-list">
           <li class="social-item">
             <a class="social-link" href="#">
@@ -262,7 +262,7 @@
         <p class="head-content-descr">Развиваем и контролируем<br>продажи за вас</p>
       </div>
       <div class="head-content-right">
-        <p class="free">Вместе с <span class="gradient">бесплатной<br>консультацией</span> мы дарим:</p>
+        <p class="free">Вместе с <span class="gradient">бесплатной</span><br><sapn class="gradient">консультацией</sapn> мы дарим:</p>
         <ul class="gift-list d-n-660">
           <li class="gift-item">
             <h3 class="gift-title">Виджеты</h3>
