--- a/index.html
+++ b/index.html
@@ -329,7 +329,7 @@
               <a href="#">Кейсы</a>
             </li>
             <li class="footer-link">
-              <a href="#">Благодарственные<br>письма</a>
+              <a href="#">Благодарственные письма</a>
             </li>
             <li class="footer-link">
               <a href="#">Сертификаты</a>
